// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction Transaction create when called with a valid transaction should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      195,
      46,
      91,
      31,
      41,
      37,
      98,
      67,
      24,
      96,
      191,
      29,
      202,
      238,
      188,
      7,
      120,
      18,
      132,
      78,
      109,
      138,
      124,
      213,
      43,
      169,
      81,
      109,
      159,
      7,
      85,
      82,
      171,
      118,
      46,
      167,
      187,
      183,
      16,
      254,
      180,
      216,
      26,
      124,
      204,
      18,
      244,
      104,
      1,
      118,
      48,
      184,
      66,
      226,
      125,
      210,
      164,
      187,
      173,
      51,
      78,
      5,
      97,
      10,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called with multi-signature account in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      195,
      46,
      91,
      31,
      41,
      37,
      98,
      67,
      24,
      96,
      191,
      29,
      202,
      238,
      188,
      7,
      120,
      18,
      132,
      78,
      109,
      138,
      124,
      213,
      43,
      169,
      81,
      109,
      159,
      7,
      85,
      82,
      171,
      118,
      46,
      167,
      187,
      183,
      16,
      254,
      180,
      216,
      26,
      124,
      204,
      18,
      244,
      104,
      1,
      118,
      48,
      184,
      66,
      226,
      125,
      210,
      164,
      187,
      173,
      51,
      78,
      5,
      97,
      10,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called with nonce equal to zero in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      212,
      243,
      51,
      240,
      47,
      148,
      153,
      186,
      144,
      243,
      169,
      93,
      99,
      250,
      47,
      151,
      108,
      150,
      241,
      232,
      56,
      73,
      12,
      25,
      22,
      94,
      197,
      147,
      161,
      251,
      31,
      157,
      135,
      216,
      81,
      132,
      29,
      213,
      44,
      169,
      137,
      50,
      57,
      254,
      73,
      11,
      244,
      13,
      29,
      109,
      29,
      27,
      46,
      131,
      71,
      87,
      19,
      142,
      226,
      84,
      207,
      47,
      117,
      12,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called with optional keys in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      195,
      46,
      91,
      31,
      41,
      37,
      98,
      67,
      24,
      96,
      191,
      29,
      202,
      238,
      188,
      7,
      120,
      18,
      132,
      78,
      109,
      138,
      124,
      213,
      43,
      169,
      81,
      109,
      159,
      7,
      85,
      82,
      171,
      118,
      46,
      167,
      187,
      183,
      16,
      254,
      180,
      216,
      26,
      124,
      204,
      18,
      244,
      104,
      1,
      118,
      48,
      184,
      66,
      226,
      125,
      210,
      164,
      187,
      173,
      51,
      78,
      5,
      97,
      10,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called without sender public key in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      195,
      46,
      91,
      31,
      41,
      37,
      98,
      67,
      24,
      96,
      191,
      29,
      202,
      238,
      188,
      7,
      120,
      18,
      132,
      78,
      109,
      138,
      124,
      213,
      43,
      169,
      81,
      109,
      159,
      7,
      85,
      82,
      171,
      118,
      46,
      167,
      187,
      183,
      16,
      254,
      180,
      216,
      26,
      124,
      204,
      18,
      244,
      104,
      1,
      118,
      48,
      184,
      66,
      226,
      125,
      210,
      164,
      187,
      173,
      51,
      78,
      5,
      97,
      10,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction decode transaction from input as buffer should return decoded transaction 1`] = `
Object {
  "asset": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "assetID": 0,
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      221,
      147,
      228,
      202,
      91,
      72,
      208,
      182,
      4,
      231,
      207,
      46,
      87,
      206,
      33,
      190,
      67,
      163,
      22,
      63,
      133,
      60,
      131,
      216,
      141,
      56,
      48,
      50,
      253,
      131,
      11,
      191,
    ],
    "type": "Buffer",
  },
  "moduleID": 2,
  "nonce": 54n,
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction decode transaction from input as hex should return decoded transaction 1`] = `
Object {
  "asset": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "assetID": 0,
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      221,
      147,
      228,
      202,
      91,
      72,
      208,
      182,
      4,
      231,
      207,
      46,
      87,
      206,
      33,
      190,
      67,
      163,
      22,
      63,
      133,
      60,
      131,
      216,
      141,
      56,
      48,
      50,
      253,
      131,
      11,
      191,
    ],
    "type": "Buffer",
  },
  "moduleID": 2,
  "nonce": 54n,
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction sign when called with multi-signature account in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      195,
      46,
      91,
      31,
      41,
      37,
      98,
      67,
      24,
      96,
      191,
      29,
      202,
      238,
      188,
      7,
      120,
      18,
      132,
      78,
      109,
      138,
      124,
      213,
      43,
      169,
      81,
      109,
      159,
      7,
      85,
      82,
      171,
      118,
      46,
      167,
      187,
      183,
      16,
      254,
      180,
      216,
      26,
      124,
      204,
      18,
      244,
      104,
      1,
      118,
      48,
      184,
      66,
      226,
      125,
      210,
      164,
      187,
      173,
      51,
      78,
      5,
      97,
      10,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [
      191,
      105,
      161,
      26,
      28,
      39,
      127,
      136,
      61,
      26,
      17,
      12,
      92,
      81,
      148,
      190,
      44,
      255,
      123,
      103,
      41,
      89,
      18,
      198,
      222,
      222,
      181,
      203,
      14,
      130,
      22,
      11,
      84,
      206,
      173,
      215,
      133,
      222,
      95,
      197,
      248,
      115,
      161,
      52,
      205,
      182,
      158,
      68,
      23,
      152,
      247,
      42,
      222,
      67,
      117,
      216,
      35,
      134,
      167,
      139,
      211,
      203,
      73,
      14,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction sign when called with optional keys in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      195,
      46,
      91,
      31,
      41,
      37,
      98,
      67,
      24,
      96,
      191,
      29,
      202,
      238,
      188,
      7,
      120,
      18,
      132,
      78,
      109,
      138,
      124,
      213,
      43,
      169,
      81,
      109,
      159,
      7,
      85,
      82,
      171,
      118,
      46,
      167,
      187,
      183,
      16,
      254,
      180,
      216,
      26,
      124,
      204,
      18,
      244,
      104,
      1,
      118,
      48,
      184,
      66,
      226,
      125,
      210,
      164,
      187,
      173,
      51,
      78,
      5,
      97,
      10,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [
      191,
      105,
      161,
      26,
      28,
      39,
      127,
      136,
      61,
      26,
      17,
      12,
      92,
      81,
      148,
      190,
      44,
      255,
      123,
      103,
      41,
      89,
      18,
      198,
      222,
      222,
      181,
      203,
      14,
      130,
      22,
      11,
      84,
      206,
      173,
      215,
      133,
      222,
      95,
      197,
      248,
      115,
      161,
      52,
      205,
      182,
      158,
      68,
      23,
      152,
      247,
      42,
      222,
      67,
      117,
      216,
      35,
      134,
      167,
      139,
      211,
      203,
      73,
      14,
    ],
    "type": "Buffer",
  },
]
`;
